kubernetes/applications/plex/plex-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: plex
  name: plex
  namespace: theater
spec:
  replicas: 1
  strategy:
    rollingUpdate: null
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
    spec:
      containers:
      - name: plex
        image: plexinc/pms-docker
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 32400
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: transcode
          mountPath: /transcode
        - name: media
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: transcode
        persistentVolumeClaim:
          claimName: plex-transcode
      - name: media
        nfs:
          server: 192.168.1.228
          path: /mnt/homelab/k8s/nfs/media
