kubernetes/applications/plex/plex-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: plex
  name: plex
  namespace: theater
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 32400
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: plex
